<resources>
    <string name="app_name">新概念AI学英语</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="order_tips1">欢迎您:</string>
    <string name="order_tips2">订单:</string>
    <string name="order_tips3">需要支付人民币:</string>

    <string name="choose_method">选择支付方式</string>
    <string name="pay_method_wx">微信支付</string>
    <string name="confirm">确认支付</string>

    <string name="device_wx">推荐安装微信5.0以上的版本使用</string>
    <string name="device_zfb">推荐支付宝账号的用户使用</string>
    <string name="pay_method_zfb">支付宝支付</string>


    <string name="vip_intro3">1.尊享微课模块:VOA英语Lisa博士、Rachel美语发音；Alex博士BBC英式发音；新概念英语全4册；四六级名师陈苏灵、李尚龙、石雷鹏、尹延、章敏等；托福、雅思、考研、学位英语、中职英语等名师讲解所有课程全部免费学习\n2.尊享爱语吧旗下全站会员特权。</string>


    <string-array name="lessonSpeedChoose">
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
    </string-array>

</resources>